testdata/baselines/reference/submodule/compiler/jsdocPropertyTagInvalid.errors.txt
/a.js(6,13): error TS2304: Cannot find name 'MyType'.


==== /a.js (1 errors) ====
    /**
     * @typedef MyType
     * @property {sting} [x]
     */
    
    /** @param {MyType} p  */
                ~~~~~~
!!! error TS2304: Cannot find name 'MyType'.
    export function f(p) { }
    
==== /b.js (0 errors) ====
    import { f } from "./a.js"
    f({ x: 42 })
    